Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-386

Test failure on test suite replay-single

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Blocker Blocker
    • Lustre 2.1.0
    • None
    • None
    • 3
    • 4971

      This issue was created by maloo for sarah <sarah@whamcloud.com>

      This issue relates to the following test suite run: https://maloo.whamcloud.com/test_sets/27ae3e58-8d47-11e0-aab9-52540025f9af.

        1. test_65a_debug.diff
          0.7 kB
        2. test_65a
          2.08 MB
        3. debug.log
          55 kB
        4. mds-dmsg.log
          37 kB
        5. test_65a-2
          1.01 MB
        6. logs.tar.gz
          303 kB
        7. tentative.patch
          0.7 kB
        8. logs-2.tar.gz
          293 kB
        9. 65a.tar.gz
          349 kB
        10. 65alogs.tar.gz
          271 kB
        11. 65alog.tar.gz
          295 kB

            bobijam Zhenyu Xu
            maloo Maloo
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved: