LU-386 debugging patch

debugging patch just for test purpose.

Signed-off-by: Bobi Jam <bobijam@whamcloud.com>
Change-Id: I482134aa5cd5bc25679518fe25eda78511240868